--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
+<!--       <scope>test</scope> -->
     </dependency>
   </dependencies>
   <build>
